--- a/index.html
+++ b/index.html
@@ -6,12 +6,35 @@
 		<title></title>
 	</head>
 	<body>
-		
+		<h1 id="h"></h1>
 		<h1 id ="header">HTML Documents </h1>
 		
-		<button id="btn" type="submit">What do you know?</button>
+		<h2>Hello i am developer</h2>
+		<h2>Hello i am developer</h2>
+		<h2>Hello i am developer</h2>
+		<h2>Hello i am developer</h2>
+		<h2>Hello i am developer</h2>
+		<h3 class="c">I am a professional Programmer</h3>
+		<h3 class="c">I am a professional Programmer</h3>
+		<h3 class="c">I am a professional Programmer</h3>
+		<h3 class="c">I am a professional Programmer</h3>
+		<h3 class="c">I am a professional Programmer</h3>
+		<h3 class="c">I am a professional Programmer</h3>
+		
+		
+		<button id="btn">What do you know?</button>
+		
+		<ul id="u">
+			<li><a href="#">Home</a></li>
+		</ul>
+		
+		<button onclick="message()" type="submit">click</button>
+		
+		
 		
 		
 		<script src="index.js" type="text/javascript" charset="utf-8"></script>
+		<script src="dom.js" type="text/javascript" charset="utf-8"></script>
+		<script src="event.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
