--- a/index.html
+++ b/index.html
@@ -31,10 +31,15 @@
 		<button onclick="message()" type="submit">click</button>
 		
 		
+		<div id="my-div" class="a">
+			
+		</div>
+		
 		
 		
 		<script src="index.js" type="text/javascript" charset="utf-8"></script>
 		<script src="dom.js" type="text/javascript" charset="utf-8"></script>
 		<script src="event.js" type="text/javascript" charset="utf-8"></script>
+		<script src="createElement.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
