--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
 		<title></title>
 	</head>
 	<body>
+		
+		
+		
+
+		<h1>Audio Click Button </h1>
+		
+	<button class="btnn">a</button>
+	<button class="btnn">b</button>
+	<button class="btnn">c</button>
+	<button class="btnn">d</button>
+		
+		
+		
 		<h1 id="h"></h1>
 		<h1 id ="header">HTML Documents </h1>
 		
@@ -36,10 +49,26 @@
 		</div>
 		
 		
+		<h1 id="addHeader">Hello Button ......</h1>
+		
+		<button class="btn">Button1</button>
+		<button class="btn">Button2</button>
+		<button class="btn">Button3</button>
+		<button class="btn">Button4</button>
+		
+		
+		
+		
+		
+		
+		
+		
 		
 		<script src="index.js" type="text/javascript" charset="utf-8"></script>
 		<script src="dom.js" type="text/javascript" charset="utf-8"></script>
 		<script src="event.js" type="text/javascript" charset="utf-8"></script>
 		<script src="createElement.js" type="text/javascript" charset="utf-8"></script>
+		<script src="addEvent.js" type="text/javascript" charset="utf-8"></script>
+		<script src="audio-click.js" type="text/javascript" charset="utf-8"></script>
 	</body>
 </html>
